<resources>
    <string name="app_name">LW003 Plus</string>

    <string name="title_lora">LoRa</string>
    <string name="title_scanner">SCANNER</string>
    <string name="title_general">GENERAL</string>
    <string name="title_device">DEVICE</string>
    <string name="connection_setting">Connection Settings</string>
    <string name="application_setting">Application Settings</string>
    <string name="general_heartbeat_interval">Heartbeat Interval</string>
    <string name="lw003_v3_general_ble_settings">Bluetooth Broadcast Settings</string>
    <string name="general_gps_fix">GPS Fix Function Settings</string>
    <string name="general_th_settings"><![CDATA[T&H Settings]]></string>
    <string name="general_axis_setting">3-Axis Settings</string>
    <string name="general_on_off_settings">ON/OFF Settings</string>
    <string name="general_continuity_transfer_function">Continuity Transfer Function</string>
    <string name="general_continuity_transfer_function_tips">*When the device encounters network disconnection or power failure, whether continue to transfer the data that hadn\'t been uploaded before when it is connected to the network or powered up again</string>
    <string name="device_information">Device Information</string>
    <string name="local_data_sync">Local Data Sync</string>
    <string name="indicator_settings">Indicator Settings</string>
    <string name="lw003_v3_low_power_prompt_tips">*When the battery is less than or equal to %s, the red LED will flash once every 30 seconds.</string>
    <string name="bxp_t_h"><![CDATA[BXP - T&H]]></string>
    <string name="scan_report_strategies"><![CDATA[Scan&Report Strategies]]></string>
    <string name="bluetooth_filter_settings">Bluetooth Filter Settings</string>
    <string name="payload_contents_selection">Payload Contents Selection</string>
    <string name="alarm_payload_settings">Alarm Payload Settings</string>
    <string name="report_data_max_length">Report Data Max Length</string>
    <string name="data_retention_strategy">Data Retention Strategy</string>
    <string name="data_retention_strategy_tips">*Data retention strategy when the report interval isn\'t enough to upload all the data for the current reporting cycle</string>
    <string name="no_scan_no_report"><![CDATA[No Scan & No report]]></string>
    <string name="timing_scan_immediately_report"><![CDATA[Timing Scan & Immediately Report]]></string>
    <string name="periodic_scan_immediately_report"><![CDATA[Periodic scan & Immediately Report]]></string>
    <string name="scan_always_periodic_report"><![CDATA[Scan Always On & Periodic Report]]></string>
    <string name="periodic_scan_periodic_report"><![CDATA[Periodic Scan & Periodic Report]]></string>
    <string name="scan_always_timing_report"><![CDATA[Scan Always On & Timing Report]]></string>
    <string name="timing_scan_timing_report"><![CDATA[Timing Scan & Timing Report]]></string>
    <string name="periodic_scan_timing_report"><![CDATA[Periodic Scan & Timing Report]]></string>
    <string name="bluetooth_scan_interval_tips">*The Bluetooth Scan Interval shouldn\'t be less than Bluetooth Scan Duration.</string>
    <string name="report_interval_tips">*The Report Interval shouldn\'t be less than Bluetooth Scan Interval.</string>
    <string name="payload_ibeacon_content">iBeacon Content</string>
    <string name="payload_eddystone_uid_content">Eddystone-UID Content</string>
    <string name="payload_eddystone_url_content">Eddystone-URL Content</string>
    <string name="payload_eddystone_tlm_content">Eddystone-TLM Content</string>
    <string name="payload_bxp_ibeacon_content">BXP-iBeacon Content</string>
    <string name="payload_bxp_device_info_content">BXP-Device Info Content</string>
    <string name="payload_bxp_acc_content">BXP-ACC Content</string>
    <string name="payload_bxp_th_content"><![CDATA[BXP-T&H Content]]></string>
    <string name="payload_bxp_button_content">BXP-Button Content</string>
    <string name="payload_mk_tof_content">MK-TOF Content</string>
    <string name="payload_mk_pir_content">MK-PIR Content</string>
    <string name="payload_nano_content">NanoBeacon Info  Content</string>
    <string name="payload_other_type_content">Other Type Content</string>
    <string name="battery_reset_tips">*After replace with the new battery, need to click \"Reset\", otherwise the low power prompt will be unnormal.</string>
</resources>
